<?xml version="1.0"?>
<package format="2">
  <name>kvaser_interface</name>
  <version>4.0.3</version>
  <description>Kvaser CAN/CANFD interface for ROS device drivers.</description>
  <license>MIT</license>

  <maintainer email="http://www.hlklemove.com/eng/main.do"> HL Klemove AD SW Design / AD LAB </maintainer>

  <url type="bugtracker">https://github.com/astuff/kvaser_interface/issues</url>
  <url type="repository">https://github.com/astuff/kvaser_interface</url>

  <author email="jwhitley@autonomoustuff.com">Joshua Whitley</author>
  <author email="dstanek@autonomoustuff.com">Daniel Stanek</author>
  <author email="taehan.kim@halla.com">Taehan Kim</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslint</build_depend>
  <build_depend>rostest</build_depend>

  <depend>roscpp</depend>
  <depend>can_msgs</depend>
</package>
